# IP2Vec

./: .gitignore  Cargo.toml  README.md  flake.nix  libtorch.nix  nsight_systems.nix
model/: config.json
src/: dataset.rs  interface.rs  lib.rs  loss.rs  main.rs  model.rs  train.rs
src/dataset/: batch.rs  mod.rs
