[package]
name = "ip2vec"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "~1.0"
clap = { version = "~4.5", features = ["derive"] }

thousands = "~0.2"
indexmap = "~2.12"
serde = { version = "~1.0", features = ["derive"] }
csv = "~1.4"

burn = { version = "~0.19", features = [
  "tui", "train", "metrics",
  "tch", "fusion", "autodiff"
], default-features = false }
derivative = "~2.2"

[dev-dependencies]
proptest = "1.8.0"
proptest-derive = "0.6.0"

[profile.experiment]
inherits = "release"
debug = true
