[package]
name = "ip2vec"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "~1.0"
derivative = "~2.2"
clap = { version = "~4.5", features = ["derive"] }

serde = { version = "~1.0", features = ["derive"] }
csv = "~1.4"
rmp-serde = "~1.3"

rand = { version = "~0.10", features = ["alloc"] }
ndarray = "~0.17"
ndarray-linalg = { version = "~0.18", features = ["intel-mkl-static"] }
petal-decomposition = { version = "~0.9", features = ["intel-mkl-static", "serialization"] }

burn = { version = "~0.19", features = [
  "tui", "train", "metrics",
  "tch", "fusion", "autodiff"
], default-features = false }

[dev-dependencies]
proptest = "1.8.0"
proptest-derive = "0.6.0"

[profile.experiment]
inherits = "release"
debug = true
