[package]
name = "ip2vec"
version = "1.0.0"
license = "LGPL-3.0-or-later"
edition = "2024"

[dependencies]
anyhow = "~1.0"
derivative = "~2.2"
clap = { version = "~4.5", features = ["derive"] }

serde = { version = "~1.0", features = ["derive"] }
csv = "~1.4"
rmp-serde = "~1.3"

rand = { version = "~0.10", features = ["alloc"] }
ndarray = "~0.17"
petal-decomposition = { version = "~0.9", features = ["openblas-static", "serialization"] }

burn = { version = "~0.19", features = [
  "tui", "train", "metrics",
  "tch", "fusion", "autodiff"
], default-features = false }

mimalloc = { version = "~0.1", features = ["v3"] }

[dev-dependencies]
proptest = "1.8.0"
proptest-derive = "0.6.0"

# Uncomment for native CPU instructions
#[build]
#rustflags = [ "-C", "target-cpu=native" ]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3

[profile.experiment]
inherits = "release"
debug = true
